@@ -651,11 +651,11 @@ h1    {font-family: sans-serif; font-size: large; font-weight: bold}
                                     // loic1: fixed bad regexp
                                     // TODO: db names may contain characters
                                     //       that are regexp instructions
-                                    $re        = '@(^|(\\\\\\\\)+|[^\])';
-                                    $uva_regex = preg_replace($re . '%@', '\\1.*', preg_replace($re . '_@', '\\1.{1}', $uva_matchpattern));
+                                    $re        = '(^|(\\\\\\\\)+|[^\])';
+                                    $uva_regex = ereg_replace($re . '%', '\\1.*', ereg_replace($re . '_', '\\1.{1}', $uva_matchpattern));
                                     // Fixed db name matching
                                     // 2000-08-28 -- Benjamin Gandon
-                                    if (preg_match('@^' . $uva_regex . '$@', $uva_db)) {
+                                    if (ereg('^' . $uva_regex . '$', $uva_db)) {
                                         $dblist[] = $uva_db;
                                         break;
                                     }
@@ -1104,7 +1104,7 @@ h1    {font-family: sans-serif; font-size: large; font-weight: bold}
                         // We don't want more than one asterisk inside our 'only_db'.
                         continue;
                     }
-                    if ($is_show_dbs && preg_match('@(^|[^\\\\])(_|%)@', $dblist[$i])) {
+                    if ($is_show_dbs && ereg('(^|[^\])(_|%)', $dblist[$i])) {
                         $local_query = 'SHOW DATABASES LIKE \'' . $dblist[$i] . '\'';
                         $rs          = PMA_mysql_query($local_query, $dbh);
                         // "SHOW DATABASES" statement is disabled
