@@ -174,8 +174,8 @@ if (!defined('PMA_SELECT_LANG_LIB_INCLUDED')) {
             foreach($available_languages AS $key => $value) {
                 // $envType =  1 for the 'HTTP_ACCEPT_LANGUAGE' environment variable,
                 //             2 for the 'HTTP_USER_AGENT' one
-                if (($envType == 1 && preg_match('@^(' . $value[0] . ')(;q=[0-9]\\.[0-9])?$@i', $str))
-                    || ($envType == 2 && preg_match('@(\(|\[|;[[:space:]])(' . $value[0] . ')(;|\]|\))@i', $str))) {
+                if (($envType == 1 && eregi('^(' . $value[0] . ')(;q=[0-9]\\.[0-9])?$', $str))
+                    || ($envType == 2 && eregi('(\(|\[|;[[:space:]])(' . $value[0] . ')(;|\]|\))', $str))) {
                     $lang     = $key;
                     break;
                 }
